@@ -12,6 +12,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Remove duplicate program name from dpkg-trigger badusage output.
   * Trim trailing slash and slash dot from 'dpkg -S' arguments when those
     are path names, but not on patterns. Closes: #129577
+  * Fix the support for passing more than one --status-fd option to dpkg.
+    Until now only the last one was being used.
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
