@@ -1,5 +1,9 @@
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
+	* src/main.c (setpipe): Fix the setting of more than one pipef.
+
+2008-06-04  Guillem Jover  <guillem@debian.org>
+
 	* src/select.c (setselections): Free varbuf variables.
 
 2008-06-04  Guillem Jover  <guillem@debian.org>
